# cutpilot

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  SPRINT.md  TASKS.md  litellm_refactor.md  pyproject.toml  scaffold_tree.md
prompts/: editor.md  scout.md
scripts/: make_pitch_deck.py  make_title_card.py  scout_smoke.py  screenshot_ui_run.py
src/cutpilot/: __init__.py  __main__.py  cli.py  models.py  paths.py  persistence.py  pipeline.py  prompts.py  server.py  settings.py
src/cutpilot/agents/: __init__.py  editor.py  scout.py
src/cutpilot/clients/: __init__.py  ffmpeg.py  nim.py  whisper.py  youtube.py
src/cutpilot/configs/: cutpilot.yml
src/cutpilot/tools/: __init__.py  captions.py  crop.py  cut.py  merge.py  probe.py  save.py  splice.py  transcript_window.py
tests/: conftest.py
tests/e2e/: test_cli_pipeline.py
tests/integration/: test_ffmpeg_tools.py  test_scout_live.py  test_scout_sliding_live.py  test_scout_text_live.py  test_server_smoke.py  test_tool_wrappers.py
tests/unit/: test_editor_srt.py  test_ffmpeg_helpers.py  test_models.py  test_models_window.py  test_paths.py  test_persistence.py  test_prompts.py  test_scout_parse.py  test_scout_prompt.py  test_scout_sliding.py  test_settings.py  test_whisper_parse.py  test_youtube_isurl.py
ui/: index.html
