[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "cutpilot"
version = "0.1.0"
description = "Agentic long-video to short-clip generator. Whisper + Nemotron Nano 2 VL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sergey Leksikov", "Minje Kim" },
]
keywords = ["video", "agent", "llm", "nemotron", "whisper", "hackathon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies — keep minimal; each one earns its place.
dependencies = [
    # Models / validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",

    # CLI
    "typer>=0.12",
    "rich>=13.7",                # pretty terminal output for demo mode

    # Perception
    "faster-whisper>=1.0",       # Whisper with word-level timestamps

    # Agent framework
    "nvidia-nat[langchain,mcp]>=1.0",  # NeMo Agent Toolkit: agents, tools, workflows, MCP

    # Media
    "ffmpeg-python>=0.2",        # Python bindings for ffmpeg invocation
    "yt-dlp>=2024.8",            # source ingestion from URLs

    # Schema export / validation
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-jsonschema",
]

[project.urls]
Homepage = "https://github.com/lablup/cutpilot"
"Bug Tracker" = "https://github.com/lablup/cutpilot/issues"

# Single CLI entry point — SSoT for invocation.
[project.scripts]
cutpilot = "cutpilot.cli:app"

# NeMo Agent Toolkit component registration. `nat` reads this table at install
# time to discover `@register_function` components. If a tool doesn't show up
# in `nat info components`, reinstall the package (`pip install -e .`).
[project.entry-points."nat.components"]
cutpilot_scout = "cutpilot.agents.scout:register"
cutpilot_cut = "cutpilot.tools.cut:register"
cutpilot_crop_9_16 = "cutpilot.tools.crop:register"
cutpilot_burn_captions = "cutpilot.tools.captions:register"
cutpilot_transcript_window = "cutpilot.tools.transcript_window:register"

# ---------------------------------------------------------------------------
# Build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cutpilot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cutpilot",
    "prompts",
    "schemas",
    "README.md",
    "PRD.md",
]

# ---------------------------------------------------------------------------
# Linting and formatting — ruff is the SSoT for code style.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # allow camelCase in test names if needed

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "ffmpeg.*",
    "yt_dlp.*",
    "nat.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cutpilot",
    "--cov-report=term-missing",
]
markers = [
    "integration: slow end-to-end tests (deselect with '-m \"not integration\"')",
    "gpu: tests that require a GPU (deselect with '-m \"not gpu\"')",
]

[tool.coverage.run]
source = ["src/cutpilot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]